# tr-web

./: CMakeLists.txt  README.md  embed_assets.py  embed_assets.sh  httplib.h  tr_web_plugin.cc
web/: app.js  index.html  style.css
